--- a/app/src/main/res/layout/activity_cliente_info_perfil.xml
+++ b/app/src/main/res/layout/activity_cliente_info_perfil.xml
@@ -31,7 +31,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="información personal"
+            android:text="Información personal"
             android:textSize="20sp"
             android:fontFamily="@font/sen_font">
         </TextView>
