--- a/app/src/main/res/layout/activity_admin_res_perfil.xml
+++ b/app/src/main/res/layout/activity_admin_res_perfil.xml
@@ -43,8 +43,7 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:gravity="center_vertical"
-        android:paddingVertical="16dp"
-        android:layout_marginHorizontal="20dp">
+        android:padding="16dp">
 
         <ImageView
             android:id="@+id/ivUserPhoto"
@@ -87,8 +86,7 @@
         android:orientation="vertical"
         android:background="@drawable/rounded_background"
         android:padding="24dp"
-        android:layout_marginVertical="16dp"
-        android:layout_marginHorizontal="20dp"
+        android:layout_margin="16dp"
         android:gravity="center_vertical">
 
         <!-- N° DNI -->
@@ -315,7 +313,7 @@
         android:padding="24dp"
         android:background="@drawable/rounded_background"
         android:layout_marginTop="16dp"
-        android:layout_marginHorizontal="20dp"
+        android:layout_marginHorizontal="16dp"
         android:gravity="center_vertical">
 
         <ImageView
