--- a/app/src/main/res/layout/item_pedido.xml
+++ b/app/src/main/res/layout/item_pedido.xml
@@ -4,72 +4,98 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_margin="4dp"
-    app:cardCornerRadius="8dp"
-    app:cardElevation="2dp">
+    android:layout_marginHorizontal="8dp"
+    android:layout_marginVertical="4dp"
+    android:background="@drawable/border_bottom"
+    android:backgroundTint="@color/white">
 
-    <androidx.constraintlayout.widget.ConstraintLayout
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:padding="12dp">
+        android:orientation="vertical"
+        android:padding="12dp"
+        android:foreground="?attr/selectableItemBackground">
 
+        <!-- N° pedido -->
         <TextView
             android:id="@+id/tvOrderNumber"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textSize="12sp"
             android:textColor="#888888"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            android:text="#162432"/>
+            android:textAlignment="center"
+            android:text="#162432"
+            android:fontFamily="@font/sen_font"/>
 
+        <!-- Nombre -->
         <TextView
             android:id="@+id/tvCustomerName"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textSize="14sp"
+            android:textSize="16sp"
             android:textStyle="bold"
+            android:textAlignment="center"
             android:textColor="@android:color/black"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/tvOrderNumber"
+            android:fontFamily="@font/sen_font"
             android:layout_marginTop="4dp"
-            android:text="John Gomez"/>
+            android:layout_marginBottom="8dp"
+            android:text="John Gomez"
+            android:ellipsize="end"
+            android:maxLines="1"/>
 
-        <TextView
-            android:id="@+id/tvAddress"
-            android:layout_width="0dp"
+        <!-- Ubicación -->
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textSize="12sp"
-            android:textColor="#888888"
-            android:drawableStart="@drawable/ic_location"
-            android:drawablePadding="4dp"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/tvCustomerName"
-            android:layout_marginTop="4dp"
-            android:text="2118 Thornridge Cir. Syracuse"/>
+            android:orientation="horizontal"
+            android:gravity="center_vertical"
+            android:layout_marginBottom="4dp">
 
-        <ImageView
-            android:id="@+id/ivDelivery"
-            android:layout_width="wrap_content"
+            <ImageView
+                android:id="@+id/ivAddress"
+                android:layout_width="16dp"
+                android:layout_height="16dp"
+                android:src="@drawable/ic_location"
+                app:tint="@color/btn_medium"/>
+
+            <TextView
+                android:id="@+id/tvAddress"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="8dp"
+                android:textSize="14sp"
+                android:textColor="#888888"
+                android:text="2118 Thornridge Cir. Syracuse"
+                android:fontFamily="@font/sen_font"/>
+        </LinearLayout>
+
+
+        <!-- Precio Delivery -->
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:src="@drawable/ic_delivery_dining"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/tvAddress"
-            android:layout_marginTop="8dp"/>
+            android:orientation="horizontal"
+            android:gravity="center_vertical"
+            android:layout_marginBottom="4dp">
 
-        <TextView
-            android:id="@+id/tvPrice"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textSize="14sp"
-            android:textStyle="bold"
-            android:textColor="@android:color/black"
-            app:layout_constraintStart_toEndOf="@id/ivDelivery"
-            app:layout_constraintTop_toTopOf="@id/ivDelivery"
-            app:layout_constraintBottom_toBottomOf="@id/ivDelivery"
-            android:layout_marginStart="8dp"
-            android:text="S/. 15"/>
+            <ImageView
+                android:id="@+id/ivDelivery"
+                android:layout_width="16dp"
+                android:layout_height="16dp"
+                android:src="@drawable/ic_delivery_dining"
+                app:tint="@color/btn_medium"/>
 
-    </androidx.constraintlayout.widget.ConstraintLayout>
+            <TextView
+                android:id="@+id/tvPrice"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="14sp"
+                android:textStyle="bold"
+                android:textColor="@android:color/black"
+                android:fontFamily="@font/sen_font"
+                android:layout_marginStart="8dp"
+                android:text="S/. 15"/>
+        </LinearLayout>
+
+    </LinearLayout>
 </com.google.android.material.card.MaterialCardView>
