Perfiles: admin res y cliente

--- a/app/src/main/res/layout/activity_admin_res_perfil.xml
+++ b/app/src/main/res/layout/activity_admin_res_perfil.xml
@@ -50,7 +50,6 @@
             android:layout_width="80dp"
             android:layout_height="80dp"
             android:layout_gravity="center"
-            android:background="@drawable/rounded_background"
             android:scaleType="centerCrop" />
 
         <LinearLayout
@@ -123,6 +122,7 @@
                     android:fontFamily="@font/sen_font"/>
 
                 <TextView
+                    android:id="@+id/tvUserDNI"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="12345678"
@@ -166,6 +166,7 @@
                     android:fontFamily="@font/sen_font"/>
 
                 <TextView
+                    android:id="@+id/tvUserBirthdate"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="2001-05-03"
@@ -209,6 +210,7 @@
                     android:fontFamily="@font/sen_font"/>
 
                 <TextView
+                    android:id="@+id/tvUserMail"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="cl001@gmail.com"
@@ -252,6 +254,7 @@
                     android:fontFamily="@font/sen_font"/>
 
                 <TextView
+                    android:id="@+id/tvUserCell"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="123456789"
@@ -294,6 +297,7 @@
                     android:fontFamily="@font/sen_font"/>
 
                 <TextView
+                    android:id="@+id/tvUserAddress"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Av 25 de febrero 178"
