--- a/app/src/main/res/layout/activity_admin_res_editar_producto.xml
+++ b/app/src/main/res/layout/activity_admin_res_editar_producto.xml
@@ -93,7 +93,7 @@
             android:id="@+id/btnEditarProducto"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="EDITAR PRODUCTO"
+            android:text="GUARDAR CAMBIOS"
             android:textSize="16sp"
             android:paddingTop="12dp"
             android:paddingBottom="12dp"
