Perfiles: superadmin y repartidor

--- a/app/src/main/res/layout/activity_repartidor_perfil.xml
+++ b/app/src/main/res/layout/activity_repartidor_perfil.xml
@@ -124,6 +124,7 @@
                     android:fontFamily="@font/sen_font"/>
 
                 <TextView
+                    android:id="@+id/tvUserDNI"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="12345678"
@@ -167,6 +168,7 @@
                     android:fontFamily="@font/sen_font"/>
 
                 <TextView
+                    android:id="@+id/tvUserBirthdate"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="2001-05-03"
@@ -210,6 +212,7 @@
                     android:fontFamily="@font/sen_font"/>
 
                 <TextView
+                    android:id="@+id/tvUserMail"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="cl001@gmail.com"
@@ -253,6 +256,7 @@
                     android:fontFamily="@font/sen_font"/>
 
                 <TextView
+                    android:id="@+id/tvUserCell"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="123456789"
@@ -295,6 +299,7 @@
                     android:fontFamily="@font/sen_font"/>
 
                 <TextView
+                    android:id="@+id/tvUserAddress"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Av 25 de febrero 178"
