--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -23,4 +23,11 @@
         <item name="cornerSizeTopRight">0dp</item>
     </style>
 
+
+    <style name="SearchViewStyle">
+        <item name="android:editTextColor">@android:color/black</item>
+        <item name="android:textColorHint">@android:color/darker_gray</item>
+        <item name="android:fontFamily">@font/sen_font</item>
+    </style>
+
 </resources>
