Fix:Monto total en detalles pedidos de admin de res

--- a/app/src/main/res/layout/activity_admin_res_detalles_pedidos.xml
+++ b/app/src/main/res/layout/activity_admin_res_detalles_pedidos.xml
@@ -339,6 +339,7 @@
                             android:textSize="16sp" />
 
                         <TextView
+                            android:id="@+id/montoPedido"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="S/. 96"
@@ -362,6 +363,7 @@
                             android:textSize="16sp" />
 
                         <TextView
+                            android:id="@+id/delivery"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="S/. 4"
@@ -386,6 +388,7 @@
                             android:textStyle="bold" />
 
                         <TextView
+                            android:id="@+id/montoTotal"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="S/. 100"
